--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,11 @@ body {
 
 .accordion_item {
   border-top: 1px solid #9f9f9f;
+  padding-bottom: 10px;
+}
+
+.button:hover {
+  background: red;
 }
 
 .button {
@@ -51,21 +56,24 @@ body {
   font-size: 20px;
 }
 
-.answer {
+.direction {
   background-color: #f7f7f7;
   padding: 20px;
 }
 
 /* activate toggle */
+.accordion_item.active .button:hover {
+  background: blueviolet;
+}
 .accordion_item.active .button {
   background-color: #105057;
 }
-.answer_wrapper {
+.direction_wrapper {
   height: 0;
   overflow: hidden;
   transition: height ease 0.2s;
 }
-.answer_wrapper.open {
+.direction_wrapper.open {
   height: auto;
   /* height: 100px; */
 }
