--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,27 @@ body {
 
 .container {
   max-width: 600px;
-  margin: 6rem auto 4rem;
+  margin: 2rem auto 4rem;
   padding: 0 10px;
 }
+.Links {
+  max-width: 600px;
+  margin: 2rem auto 2rem;
+  padding: 0 10px;
+  text-align: center;
+}
+.Links .heading { color: #AE0000; }
+.Links .pages a {
+  padding: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: blue;
+  border-radius: 5px;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+.Links .pages a:hover { background-color: red; }
 
 .heading {
   font-size: 23px;
