--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
   max-width: 600px;
   margin: 2rem auto 4rem;
   padding: 0 10px;
+  text-align: center;
 }
 .Links {
   max-width: 600px;
@@ -36,7 +37,7 @@ body {
 .Links .pages a:hover { background-color: red; }
 
 .heading {
-  font-size: 23px;
+  font-size: 25px;
   margin-bottom: 20px;
   text-transform: uppercase;
 }
@@ -90,8 +91,13 @@ body {
   height: 0;
   overflow: hidden;
   transition: height ease 0.2s;
+  text-align: left;
 }
 .direction_wrapper.open {
   height: auto;
   /* height: 100px; */
+}
+
+.form-holder {
+  text-align: left;
 }
